fix: fixed jump animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -135,71 +135,63 @@ html, body {
 
 @keyframes jump {
   0% {
-    transform: translateY(0);
+    transform: translateY(0) scaleY(1) scaleX(1);
   }
   10% {
-    transform: translateY(-10px);
+    transform: translateY(-10px) scaleY(1.1) scaleX(0.95);
   }
   20% {
-    transform: translateY(-20px);
-  }
-  30% {
-    transform: translateY(-40px);
+    transform: translateY(-30px) scaleY(0.95) scaleX(1.05);
   }
   40% {
-    transform: translateY(-50px);
-  }
-  50% {
-    transform: translateY(-60px);
+    transform: translateY(-60px) scaleY(0.9) scaleX(1.08);
   }
   60% {
-    transform: translateY(-50px);
-  }
-  70% {
-    transform: translateY(-40px);
+    transform: translateY(-60px) scaleY(0.9) scaleX(1.08);
   }
   80% {
-    transform: translateY(-20px);
+    transform: translateY(-20px) scaleY(1.05) scaleX(0.98);
   }
   90% {
-    transform: translateY(-10px);
+    transform: translateY(-5px) scaleY(1.1) scaleX(0.95);
   }
   100% {
-    transform: translateY(0);
+    transform: translateY(0) scaleY(1) scaleX(1);
   }
 }
 
 @keyframes moeda-jump {
   0% {
-    transform: translateY(0);
+    transform: translateY(0) rotate(0deg);
     opacity: 0;
     z-index: 10;
   }
   10% {
     opacity: 1;
+    transform: translateY(-10px) rotate(72deg);
   }
   20% {
-    transform: translateY(-40px);
+    transform: translateY(-40px) rotate(144deg);
     opacity: 1;
   }
   40% {
-    transform: translateY(-120px);
+    transform: translateY(-120px) rotate(216deg);
     opacity: 1;
   }
   60% {
-    transform: translateY(-140px);
+    transform: translateY(-140px) rotate(288deg);
     opacity: 1;
   }
   80% {
-    transform: translateY(-120px);
+    transform: translateY(-120px) rotate(360deg);
     opacity: 1;
   }
   90% {
-    transform: translateY(-40px);
+    transform: translateY(-40px) rotate(432deg);
     opacity: 1;
   }
   100% {
-    transform: translateY(0);
+    transform: translateY(0) rotate(504deg);
     opacity: 0;
     z-index: 10;
   }
